Fix reference graph visited op terminating every branch to the referant; add special bx/bl handling support; add table decompiler